# todo_six

./: .flake8  .pre-commit-config.yaml  README.rst  ci_install.txt  conftest.py  pyproject.toml  todo.py
.github/workflows/: test.yml
data/: icon.icns
data/style_sheets/: day.qss  night.qss
data/test/: house_chores.db  test_four.db  test_one.db  test_two.db
docs/sphinx/: readme.txt
docs/sphinx/source/: DevelopersManual.rst  UsersManual.rst  conf.py  index.rst
scripts/DOS/: install.cmd
scripts/bash/: install.sh  run_tests.sh  unit_tests.sh
scripts/zsh/: install.zsh  run_tests.zsh  todo.desktop  unit_tests.zsh
tests/: database_test.py  widgets_test.py
todo_six/: '  database.py  main.py  menu_bar.py  widgets.py
